--- a/examples/browser-npm-browserify/index.html
+++ b/examples/browser-npm-browserify/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>EVT.js NPM Browserify</title>
-</head>
-<body>
-  <script src="./dist/index.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <title>evrythng.js NPM Browserify Example</title>
+  </head>
+  <body>
+    <p>Current time: <span id="output"></span></p>
+    <script src="./dist/index.js"></script>
+  </body>
 </html>
