--- a/examples/browser-npm-globals/index.html
+++ b/examples/browser-npm-globals/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>EVT.js NPM Globals</title>
-</head>
-<body>
-  <script src="./node_modules/evrythng/dist/evrythng.polyfill.js"></script>
-  <script>
-    console.log('It loads!')
-    console.log('EVT version', EVT.version)
-
-    EVT.api().catch(function(e) {
-      console.log('Fetch works!')
-      console.log('API response', e)
-    })
-  </script>
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <title>evrythng.js NPM Globals Example</title>
+  </head>
+  <body>
+    <p>Current time: <span id="output"></span></p>
+    <script type="text/javascript" src="../../dist/evrythng.browser.js"></script>
+    <script type="text/javascript">
+      evrythng.api({
+        url: '/time'
+      })
+        .then((res) => {
+          const output = document.getElementById('output')
+          output.innerHTML = res.timestamp
+        })
+        .catch(alert)
+    </script>
+  </body>
 </html>
